ugly hack to stop ghost clicks on textareas added behind a tapped button

--- a/built/chondric.css
+++ b/built/chondric.css
@@ -731,6 +731,13 @@ bottom: 0;
 .body #mocha {
     margin: 0;
 }
+
+/* ghost clicks */
+
+.cjs-transitioning {
+    pointer-events: none !important;
+}
+
 /* */
 .cjs-loading-overlay-container {
     position: relative;
