--- a/src/css/core.css
+++ b/src/css/core.css
@@ -707,3 +707,9 @@ bottom: 0;
 .body #mocha {
     margin: 0;
 }
+
+/* ghost clicks */
+
+.cjs-transitioning {
+    pointer-events: none !important;
+}
